Footer spacing fix

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -40,6 +40,7 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
 }
 
 .custom-footer {
+  margin: 120px 0px 0px 0px;
   padding: 120px 0px;
 }
 .custom-footer .wrap {
